--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -9,21 +9,26 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  
   <servlet>
-    <servlet-name>cw</servlet-name>
+    <servlet-name>cwt</servlet-name>
     <servlet-class>
         org.springframework.web.servlet.DispatcherServlet
     </servlet-class>
     <init-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/cw-servlet.xml</param-value>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/cwt-servlet.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
- </servlet>
- 
- <servlet-mapping>
-    <servlet-name>cw</servlet-name>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>cwt</servlet-name>
     <url-pattern>/</url-pattern>
- </servlet-mapping>
+  </servlet-mapping>
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:applicationContext.xml</param-value>
+  </context-param>
 </web-app>
