--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.0-rc3</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
